Introduce third mode for persisting edge's start/end nodes